# miji

./: .biomeignore  .cz-config.cjs  .editorconfig  .gitignore  .jjconfig.toml  .lintstagedrc.json  BUGFIX_SORTOPTIONS.md  BUTTON_CONSISTENCY_FIX_REPORT.md  BUTTON_STYLE_UNIFICATION_REPORT.md  CLEANUP_COMPLETED.md  ESLINT_ERRORS_FIX_REPORT.md  FAMILY_LEDGER_PLAN.md  FAMILY_LEDGER_TRANSACTION_INTEGRATION.md  FRONTEND_ANALYSIS.md  FRONTEND_REFACTORING_SUMMARY.md  LONG_TERM_ROADMAP.md  MIGRATION_CHECKLIST.md  MIGRATION_COMPLETED.md  MIGRATION_PROGRESS.md  MOBILE_INPUT_OVERLAP_FIX_REPORT.md  MOBILE_INPUT_WIDTH_FIX_REPORT.md  MOBILE_TODO_OVERLAP_FIX_REPORT.md  MODAL_INPUT_OVERLAP_FIX_REPORT.md  NAVIGATION_SUBMENU_IMPLEMENTATION.md  OLD_CODE_REMOVAL_PLAN.md  PROGRESS_TEXT_LOCATION_BTN_UNIFICATION_REPORT.md  README-ZH-CN.md  README.md  README.zh-CN.md  REFACTORING_README.md  REMOVE_DEFAULT_TIME_ESTIMATE_REPORT.md  THEME_ENHANCEMENT_README.md  THEME_FIX_README.md  TODOACTIONS_CENTER_FIX_REPORT.md  TODOACTIONS_OVERLAP_FIX_REPORT.md  TODOITEM_DISAPPEAR_FIX_REPORT.md  TODOITEM_MODERNIZATION_REPORT.md  TODOITEM_OVERLAP_FIX_REPORT.md  TODOLIST_INPUT_OVERLAP_FIX_REPORT.md  TODOPROGRESS_BUTTON_ADJUSTMENT_REPORT.md  (+33 more)
src-tauri/: .env  .gitignore  Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/auth/: Cargo.toml
src-tauri/auth/src/: commands.rs  dto.rs  error.rs  handler.rs  helper.rs  jwt.rs  lib.rs  service.rs
src-tauri/capabilities/: default.json  desktop.json  mobile.json  pinia.json  svelte.json  vue.json
src-tauri/checklists/: Cargo.toml
src-tauri/checklists/src/: error.rs
src-tauri/common/: Cargo.toml
src-tauri/common/src/: argon2id.rs  business_code.rs  commands.rs  config.rs  crud.rs  curd.rs  db.rs  db_error.rs  entity.rs  env.rs  env_error.rs  error.rs  jwt.rs  lib.rs  log.rs  paginations.rs  repeat_period_type.rs  response.rs  scheduler_config.rs  sql_error.rs  state.rs  utils.rs
src-tauri/core/: Cargo.toml
src-tauri/core/src/: commands.rs  error.rs  lib.rs  permissions.rs
src-tauri/crates/auth/: Cargo.toml
src-tauri/crates/healths/: Cargo.toml
src-tauri/crates/money/: Cargo.toml
src-tauri/crates/notification/: Cargo.toml
src-tauri/crates/todos/: Cargo.toml
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: account.rs  attachment.rs  batch_reminders.rs  bil_reminder.rs  budget.rs  budget_allocations.rs  categories.rs  currency.rs  debt_relations.rs  enums.rs  family_ledger.rs  family_ledger_account.rs  family_ledger_member.rs  family_ledger_transaction.rs  family_member.rs  installment_details.rs  installment_plans.rs  lib.rs  localize.rs  notification_logs.rs  notification_reminder_history.rs  notification_reminder_state.rs  notification_settings.rs  operation_log.rs  period_daily_records.rs  period_pms_records.rs  period_pms_symptoms.rs  period_records.rs  period_settings.rs  period_symptoms.rs  prelude.rs  project.rs  project_tag.rs  reminder.rs  scheduler_config.rs  settlement_records.rs  split_record_details.rs  split_records.rs  split_rules.rs  sub_categories.rs  (+10 more)
src-tauri/health/: Cargo.toml
src-tauri/health/src/: error.rs
src-tauri/icons/: icon.icns
src-tauri/localize_model_derive/: Cargo.toml
src-tauri/localize_model_derive/src/: lib.rs
src-tauri/macros/src/: lib.rs
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  lib_old_backup.rs  m20250101_000000_insert_default_user.rs  m20250101_120000_add_is_virtual_to_account.rs  m20250102_000000_add_installment_fields_to_transactions.rs  m20250115_000001_enhance_todo_reminder_fields.rs  m20250115_000002_enhance_bil_reminder_fields.rs  m20250115_000003_enhance_reminder_fields.rs  m20250115_000004_create_notification_tables.rs  m20250116_000000_create_installment_tables.rs  m20250116_000001_update_installment_date_types.rs  m20250120_000000_add_phone_bill_subcategory.rs  m20250420_060449_create_user_enum.rs  m20250420_060450_create_user.rs  m20250420_060452_create_todos.rs  m20250420_060909_create_todos_tags.rs  m20250420_061310_create_todotags.rs  m20250420_061334_create_todo_taskdependency.rs  m20250420_061351_create_todo_attachment.rs  m20250420_061400_create_todo_reminder.rs  m20250420_064505_create_user.rs  m20250420_072036_create_project.rs  m20250426_071106_create_todo_project.rs  m20250525_052936_create_period_enum.rs  m20250525_053031_create_period_daily_records.rs  m20250525_053043_create_period_symptoms.rs  m20250525_053058_create_period_pms_records.rs  m20250525_053115_create_period_pms_symptoms.rs  m20250527_000001_create_money_enum.rs  m20250527_000002_create_money_account.rs  m20250527_000002_create_money_currency.rs  m20250527_000003_create_money_family_member.rs  m20250527_000004_create_money_account.rs  m20250527_000005_create_money_budget.rs  m20250527_000006_create_money_transaction.rs  m20250527_000007_create_money_bill_reminder.rs  m20250527_000007_create_money_family_ledger.rs  m20250527_000008_create_money_bill_reminder.rs  m20250610_000001_create_user.rs  m20250610_000002_create_project.rs  (+101 more)
src-tauri/miji_derive/: Cargo.toml
src-tauri/miji_derive/src/: lib.rs
src-tauri/money/: Cargo.toml
src-tauri/money/src/: commands.rs  dto.rs  error.rs  handler.rs  handlers.rs  services.rs
src-tauri/notes/: Cargo.toml
src-tauri/notes/src/: error.rs
src-tauri/profile/: Cargo.toml
src-tauri/profile/src/: error.rs
src-tauri/services/: Cargo.toml
src-tauri/services/src/: error.rs
src-tauri/settings/: Cargo.toml
src-tauri/settings/src/: error.rs
src-tauri/src/: app_initializer.rs  app_state.rs  commands.rs  default_account.rs  default_user.rs  desktops.rs  lib.rs  logging.rs  main.rs  migrations.rs  mobiles.rs  plugins.rs  scheduler_manager.rs  system_commands.rs  tray_manager.rs
src-tauri/src/commands/: notification_commands.rs  scheduler_commands.rs
src-tauri/src/desktops/: init.rs
src-tauri/src/logging/: config.rs  formatter.rs  manager.rs
src-tauri/src/mobiles/: init.rs  notification_setup.rs  system_monitor.rs
src-tauri/todos/: Cargo.toml
src-tauri/todos/src/: commands.rs  dto.rs  error.rs  handlers.rs  helper.rs  lib.rs  (+2 more)
(+1310 files in other folders)
