[package]
name = "miji"
version = "0.1.0"
description = "A modular, cross-platform productivity and health app built with Tauri and Rust."
authors = ["mcgeq"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "core",
  "auth",
  "migration",
  "notes",
  "todos",
  "checklists",
  "profile",
  "settings",
  "health",
  "services",
  "common",
  "money",
]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "miji_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[workspace.dependencies]
base64 = "0.22.1"
jsonwebtoken = "9.3.1"
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = { version = "0.8.5", features = [
  "backtrace",
  "backtraces-impl-backtrace-crate",
] }
tokio = { version = "1.45.0", features = ["full", "tracing"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
tauri-plugin-log = { version = "2", features = ["colored"] }
log = { version = "0.4.27", features = ["serde"] }
argon2 = "0.5.3"
sea-orm = { version = "1.1.11", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
  "with-chrono",
  "with-json",
  "debug-print",
] }
rand = { version = "0.9.1", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
common = { path = "./common" }
auth = { path = "./auth" }

[dependencies]
tauri = { workspace = true }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
tauri-plugin-log = { workspace = true }
dotenvy.workspace = true
sea-orm.workspace = true
migration = { path = "migration" }
common = { workspace = true }
tokio = { workspace = true }
auth = { workspace = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
