[package]
name = "auth"
version = "0.1.0"
edition = "2024"
description = "User authentication and authorization including login, registration, and session management."

[dependencies]
snafu = { workspace = true }
argon2 = { workspace = true }
serde = { workspace = true }
common = { path = "../common" }
