[package]
name = "auth"
version = "0.1.0"
edition = "2024"
description = "User authentication and authorization including login, registration, and session management."

[dependencies]
chrono = { workspace = true }
snafu = { workspace = true }
argon2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
sea-orm = { workspace = true }
tauri = { workspace = true }
common = { path = "../common" }
log = { workspace = true }
validator = { workspace = true }
tokio = { workspace = true }
