[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
chrono = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
tauri = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
miji_derive = { workspace = true }
jsonwebtoken = { workspace = true }
