[package]
name = "miji_core"
version = "0.1.0"
edition = "2024"
description = "Common core definitions, shared models, error types, and utilities."

[dependencies]
snafu = { workspace = true }
auth = { path = "../auth" }
health = { path = "../health" }
notes = { path = "../notes" }
todos = { path = "../todos" }
profile = { path = "../profile" }
settings = { path = "../settings" }
services = { path = "../services" }
checklists = { path = "../checklists" }
