[package]
name = "miji_core"
version = "0.1.0"
edition = "2024"
description = "Common core definitions, shared models, error types, and utilities."

[dependencies]
snafu = { workspace = true }
sea-orm = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
common = { path = "../common" }
