[package]
name = "entity"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { workspace = true }
serde = { workspace = true }
chrono-tz = { workspace = true }
chrono = { workspace = true }
localize_model_derive = { workspace = true }
rust_decimal = { workspace = true }
strum = { version = "0.25", features = ["derive"] }
