[package]
name = "money"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
snafu = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sea-orm = { workspace = true }
tauri = { workspace = true }
common = { path = "../common" }
log = { workspace = true }
validator = { workspace = true }
tokio = { workspace = true }
miji_derive = { workspace = true }
rust_decimal = { workspace = true }
