[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
snafu = { workspace = true }
common = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
validator = { workspace = true }
entity = { workspace = true }
sea-orm = { workspace = true }
tauri = { workspace = true }
tracing = { workspace = true }
